Fix styles on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,22 +41,21 @@ p {
 .form {
   display: flex;
   flex-direction: column;
-  padding-block: 2.5rem;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1.8rem;
   border-radius: 3px;
 }
 .form .form__itm {
   width: 80%;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.4rem;
 }
 .form label, .form .form__info {
-  color: #404040;
+  color: #443b37;
 }
 .form input::placeholder {
-  color: #737373;
+  color: #7d6c64;
 }
 .form input {
   all: unset;
@@ -130,8 +129,9 @@ section {
   justify-content: space-between;
   align-items: center;
   background: inherit;
+  top: 0;
   gap: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.8rem;
 }
 .navbar .nav__title {
   font-size: 2.3rem;
@@ -272,15 +272,13 @@ section {
 }
 
 .login-form {
-  position: absolute;
-  width: 100%;
   max-width: 500px;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 @media screen and (min-width: 500px) {
   .login-form {
-    top: 50%;
+    margin-top: 8rem;
+  }
+  .login-form .form {
+    padding-block: 2rem;
   }
 }
